--- a/style.css
+++ b/style.css
@@ -335,6 +335,13 @@ nav {
     position: relative;
 }
 
+@media (max-width: 768px) {
+    .theme-toggle {
+        margin-right: 20px;
+        /* Adjust the value as needed */
+    }
+}
+
 .blob {
     position: absolute;
     width: 400px;
